Fees and Exam module Completed
